--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 
+/* Standard */
+
+body.home {
+	overflow:hidden;
+}
+
 .page{
 	width: 100%;
 	margin: 0;
@@ -25,6 +31,11 @@ h2{
 	letter-spacing: 1px;
 }
 
+a.h2:hover {
+		border-bottom: .05em solid #ffffff;
+
+}
+
 h3{
 	color: #040603;
 	text-align: left;
@@ -38,12 +49,12 @@ h3{
 h4{
 	color: #040603;
 	text-align: left;
-	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
 	font-size: 2.9vw;
 	letter-spacing: 1px;
-	line-height: 3.5vw;
+	
+
 }
 
 h5{ 
@@ -83,15 +94,34 @@ em{
 
 strong{
 	color: #ffffff;
+}
+
+p {
+	color: #ffffff;
 	text-align: left;
 	text-decoration: none;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 700;
-	font-size: 49px;
-	font-style: italic;
-	letter-spacing: 1px;
-	line-height: 60px;
+	font-family: 'Merriweather', serif;
+	font-size: 1.5vw;
+	line-height: 3vw;
+	padding-bottom: .5vw;
 }
+
+i {
+	font-family: 'Merriweather', serif;
+	font-weight: 400;
+	color: #73c3b4;
+
+}
+
+.text {
+	padding-top: 2vw;
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 2vw;
+}
+
+/* Main Nav */
 
 nav {
     width: 100%;
@@ -132,6 +162,8 @@ nav ul li {
 	font-size: 1vw;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+	     -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
 	}
 
 
@@ -143,36 +175,14 @@ nav ul li a {
     display: block;
     text-decoration: none;
     color: #73c3b4;
+
 }
 
 nav ul li a:hover {
     color: #FFFFFF;
 }
 
-p {
-	color: #ffffff;
-	text-align: left;
-	text-decoration: none;
-	font-family: 'Merriweather', serif;
-	font-size: 1.5vw;
-	line-height: 3vw;
-	padding-bottom: .5vw;
-}
-
-i {
-	font-family: 'Merriweather', serif;
-	font-weight: 400;
-	color: #73c3b4;
-
-}
-
-.text {
-	padding-top: 2vw;
-	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
-	padding-bottom: 2vw;
-}
+/* Index */
 
 #container{
 	margin-left: 30px;
@@ -186,9 +196,10 @@ i {
 
 
 .home-nav{
-	top: 0px;
-	left: 2em;
+
 	position: absolute;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
 a {
@@ -200,6 +211,8 @@ a {
 a:hover {
 border-bottom: .05em solid #ffffff;
 }
+
+/* Content */
 
 .title {
 	margin-left: 2em;
@@ -240,12 +253,10 @@ img.float {
 	position: absolute;
 	top: 0;
 	left: 0;
-	  top:4vw;
+	top:4vw;
 
 }
 
-
-/////////////////
 
 
 
@@ -253,6 +264,7 @@ img.float {
   position: relative;
 	top: 0;
 	left: 0;
+
 }
 
 .imgDescription {
@@ -278,13 +290,291 @@ h4.imgDescription {
 	width: 28.5vw;
 }
 
+
 .moveAround {
+position:fixed;
+}
+
+.moveAroundTwo {
 position:fixed;
 }
 
 
 
+button.home {
+	background: none;
+    border: none;
+    color: #73c3b4;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3.5vw;
+        -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    outline: none;
+}
+
+button.calendar {
+	background: none;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+	color: #73c3b4;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.9vw;
+	letter-spacing: 1px;
+	outline: none;
+}
+
+.toggle.calendar {
+	position: relative;
+	width: 95vw;
+
+}
+
+.calendar-info {
+	z-index: 1001;
+	margin-top: -5vw;
+	position: fixed;
+	background-color: #040603;
+
+}
+
+button.calendar-close {
+	background: none;
+    border: none;
+    color: #73c3b4;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3.5vw;
+        -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    outline: none;
+}
+
+.toggle.calendar-close {
+	z-index: 7000;
+	position: fixed;
+	right: 0;
+	padding-right: 5vw;
+	padding-top: 4vw;
+}
+
+.event-info {
+	z-index: 6000;
+	position: fixed;
+	padding-right: 1vw;
+	margin-left: 2.5em;
+	padding-top: 3vw;
+
+}
+
+.toggle.calendar-close :hover {
+	color: white;
+}
+
+.toggle.home {
+	position: fixed;
+	right: 0;
+	padding-right: 5vw;
+	padding-top: 2.55vw;
+}
+
+.toggle.home :hover {
+	color: white;
+}
+
+.toggle.home :active {
+	
 }
 
 
+.bg-image {
+	opacity: .4;
+	margin-left: -10vw;
+}
+
+button.home-search {
+	background: none;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+	color: #73c3b4;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.9vw;
+	letter-spacing: 1px;
+	outline: none;
+}
+
+button.search {
+	background: none;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+	color: #73c3b4;
+		text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 1vw;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	outline: none;
+}
+
+.search-field {
+	z-index: 7000;
+	position: fixed;
+	background-color: #73c3b4;
+	width: 100vw;
+	height: 100vw;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+button.search-close {
+	z-index: 7500;
+	background: none;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3.5vw;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    outline: none;
+
+}
+
+
+.toggle.search-close {
+	z-index: 8000;
+	position: fixed;
+	right: 0;
+	padding-right: 5vw;
+	padding-top: 3vw;
+}
+
+.toggle.search-close :hover {
+	color: #040603;
+}
+
+.type-search {
+	position: fixed;
+	margin-left: 30vw;
+	margin-top: 20vw;
+	width: 40vw;
+	height: 5vw;
+}
+
+
+
+.imgWrapArch {
+  position: relative;
+	width: 9.7%;
+	height: auto;
+	margin-left: 2.9vw;
+	display: inline-block;
+	padding-right: 19vw;
+	padding-bottom: 2.5vw;
+
+}
+
+.imgDescriptionArch {
+  	position: absolute;
+	top: -3.9vw;
+	background: #73c3b4;
+	visibility: hidden;
+	opacity: 0;
+	height: 19.3vw;
+	width: 27.7vw;
+
+}
+
+
+.imgWrapArch:hover .imgDescriptionArch {
+  	visibility: visible;
+  	opacity: 1;
+}
+
+h4.imgDescriptionArch {
+	padding-top:1.6vw;
+	padding-left:1.5vw;
+}
+
+img.arch {
+	width: 304%;
+	height: 100%;
+
+}
+
+
+button.contribute {
+	background: none;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+	color: #73c3b4;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.9vw;
+	letter-spacing: 1px;
+	outline: none;
+}
+
+.contribute-field {
+	z-index: 7000;
+	position: fixed;
+	background-color: #73c3b4;
+	width: 100vw;
+	height: 100vw;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+.contribute.search-close {
+	z-index: 7500;
+	background: none;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3.5vw;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+
+}
+
+
+.toggle.contribute-close {
+	z-index: 8000;
+	position: fixed;
+	right: 0;
+	padding-right: 5vw;
+	padding-top: 3vw;
+}
+
+.toggle.search-close :hover {
+	color: #040603;
+}
+
+.type-search {
+	position: fixed;
+	margin-left: 30vw;
+	margin-top: 20vw;
+	width: 40vw;
+	height: 5vw;
+}
 
