--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body.home {
 
 .page{
 	width: 100%;
+	height: 100%;
 	margin: 0;
 }
 
@@ -16,7 +17,7 @@ h1{
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw;
 	letter-spacing: 1px;
 
 }
@@ -27,7 +28,7 @@ h2{
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw;
 	letter-spacing: 1px;
 }
 
@@ -63,7 +64,7 @@ h5{
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw;
 	letter-spacing: 1px;
 	line-height: .01em;
 }
@@ -74,7 +75,7 @@ h6{
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw;
 	letter-spacing: 1px;
 	line-height: .01em;
 }
@@ -128,7 +129,10 @@ nav {
     border-right: none;
     position: fixed;
     z-index: 1000;
-    top: 1vw;
+    top: 0vw;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 5vw;
+    height: 4vw;
 
 }
 
@@ -199,6 +203,7 @@ nav ul li a:hover {
 
 	position: absolute;
 	width: 100%;
+	height: 100%;
 	background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -217,11 +222,11 @@ border-bottom: .05em solid #ffffff;
 .title {
 	margin-left: 2em;
 	position: relative;
-	top: 2vw;
-	padding-bottom: 2vw;
+	top: 0vw;
+	padding-bottom: 0vw;
 }
 
-.img-responsive {
+.img {
 	display: block;
 	width: 100%;
 	height: auto;
@@ -324,7 +329,7 @@ button.calendar {
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw;
 	letter-spacing: 1px;
 	outline: none;
 }
@@ -408,7 +413,7 @@ button.home-search {
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw;
 	letter-spacing: 1px;
 	outline: none;
 }
@@ -495,7 +500,7 @@ button.search-close {
 	visibility: hidden;
 	opacity: 0;
 	height: 19.3vw;
-	width: 27.7vw;
+	width: 26.7vw;
 
 }
 
@@ -503,12 +508,17 @@ button.search-close {
 .imgWrapArch:hover .imgDescriptionArch {
   	visibility: visible;
   	opacity: 1;
+  		width: 27.7vw;
+
 }
 
 h4.imgDescriptionArch {
 	padding-top:1.6vw;
 	padding-left:1.5vw;
+	width: 25.7vw;
 }
+
+
 
 img.arch {
 	width: 304%;
@@ -527,21 +537,12 @@ button.contribute {
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
-	font-size: 5.9vw;
+	font-size: 5.8vw
 	letter-spacing: 1px;
 	outline: none;
 }
 
-.contribute-field {
-	z-index: 7000;
-	position: fixed;
-	background-color: #73c3b4;
-	width: 100vw;
-	height: 100vw;
-	top: 0;
-	left: 0;
-	display: none;
-}
+
 
 .contribute.search-close {
 	z-index: 7500;
@@ -577,4 +578,278 @@ button.contribute {
 	width: 40vw;
 	height: 5vw;
 }
+
+.thumbnails {
+	position: relative;
+	height: 100%;
+	padding-bottom: 4vw;
+}
+
+.img-responsive{
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+
+button.home-contribute {
+	background: none;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+	color: #73c3b4;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+	outline: none;
+}
+
+button.contribute {
+	background: none;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+	color: #73c3b4;
+		text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 1vw;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	outline: none;
+}
+
+.contribute-field {
+	z-index: 7000;
+	position: fixed;
+	background-color: #73c3b4;
+	width: 100vw;
+	height: 100vw;
+	top: 0;
+	left: 0;
+	display: none;
+	bottom: 2vw;
+}
+
+button.contribute-close {
+	z-index: 7500;
+	background: none;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3.5vw;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    outline: none;
+
+}
+
+
+.toggle.contribute-close {
+	z-index: 8000;
+	position: fixed;
+	right: 0;
+	padding-right: 5vw;
+	padding-top: 3vw;
+}
+
+.toggle.contribute-close :hover {
+	color: #040603;
+}
+
+input[type=search] { 	
+	padding: -11px;            /* Overridden by padding: 1px; */
+		color: #040603;
+	text-align: left;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 2.9vw;
+	letter-spacing: 1px;
+	border: none;
+	border-bottom: 2px solid #ffffff;  /* Overridden by border: 2px inset; */
+	background: none;          /* Overridden by background-color: white; */
+	line-height: 3;  
+	outline: none;      
+	height: 7vw;   /* Irrelevant, I guess */
+}
+
+::-webkit-input-placeholder {
+  color: #040603;
+}
+
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
+form .contribute-form {
+
+}
+
+fieldset {
+	outline: none;
+	border: none;
+	position: fixed;
+	padding-right: 1vw;
+	margin-left: 2.5em;
+	padding-top: 0vw;
+
+}
+
+
+input:not([type=submit]):not([type=file]) {
+   border: none; 
+    border-bottom: 3px solid #ffffff;
+    margin-left: 1vw;
+    background: none;
+    outline: none;
+    padding-bottom: .85vw;
+        
+}
+
+input[type=email] {
+	 width: 72vw;
+	 color: #ffffff;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+		height: 5.7vw;
+
+}
+
+input[type=name] {
+	 width: 71vw;
+	 color: #ffffff;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+		height: 5.7vw;
+
+}
+
+textarea {
+	   border: none; 
+    border-bottom: 3px solid #ffffff;
+    background: none;
+    margin-left: 1vw;
+    outline: none;
+    resize: none;
+    width: 53.7vw;
+    color: #ffffff;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+	height: 5.5vw;
+	 padding-bottom: -2vw;
+
+
+}
+
+.contribute-field {
+	z-index: 7000;
+	position: fixed;
+	background-color: #73c3b4;
+	display: none;
+	overflow: scroll;
+}
+
+label {
+	color: #040603;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+}
+
+.fileUpload  {
+	color: #040603;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+
+}
+
+
+
+input[type='file'] {
+  color: transparent;
+}
+
+#yourBtn{
+	color: #ffffff;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+    margin-top: 3vw;
+   width: 22vw;
+   height: 5vw;
+   padding: 1vw;
+   padding-bottom: 3vw;
+   background-color: #040603;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  float: left;
+  margin-right: 2vw;
+  }
+
+  #yourBtn:hover{
+  	color: #040603;
+  	background-color: #ffffff;
+  }
+
+input[type=submit] {
+	  display: inline-block;
+    color: #ffffff;
+	text-align: left;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 5.8vw;
+	letter-spacing: 1px;
+    margin-top: 3vw;
+   width: 24vw;
+   height: 9vw;
+   padding: 1vw;
+   padding-bottom: 3vw;
+   background-color: #040603;
+  cursor: pointer;
+  display: inline-block;
+  outline: none;
+  border: none;
+    position: relative;
+    float: left;
+
+}
+
+input[type=submit]:hover {
+color: #040603;
+  	background-color: #ffffff;
+}
+
+
 
